# opengl_lernen

./: CMakeLists.txt  Readme.md
Getting_Started/: CMakeLists.txt
Getting_Started/dep/glad/src/: glad.c
Getting_Started/includes/: camera.h
Getting_Started/src/: main.cpp  shader.cpp
Lighting/: CMakeLists.txt
Lighting/includes/: lightshader.h
Lighting/src/: light_shader.fs  lightshader.cpp  main.cpp  obj_shader.fs  obj_shader.vs
Lightning/: CMakeLists.txt
Lightning/dep/glad/include/glad/: glad.h
Lightning/includes/: lightshader.h  shader.h
Lightning/src/: light_shader.vs  main.cpp  obj_shader.fs  shader.fs  shader.vs
notes/: NOTES-opengl.md  NOTES-operating.md
src/: main.cpp  shader.cpp  shader.fs  shader.vs
